# rawsql

./: .travis.yml  Cargo.toml  LICENSE  LICENSE-MIT  README.md  deny.toml  index.html  search-index.js
.github/: CODEOWNERS
.github/workflows/: ci.yml  msrv.yml  release.yml  sec.yml
examples/: posgtre.rs  postgre.rs  postgre.sql
rawsql/: index.html  sidebar-items.js  struct.Loader.html
src/: lib.rs  parser.rs  querybuilder.rs
src/rawsql/src/: lib.rs.html
tests/: example.sql  parser.rs
