[package]
name = "rawsql"
version = "0.1.0"
authors = ["Manuel Alonso <manuel.alonso@protonmail.com>"]
license = "MIT"
description = "A rust library for reusing SQL"
repository = "https://github.com/manute/rawsql"
documentation = "http://manute.github.io/rawsql/rawsql/index.html"
readme = "README.md"
keywords = ["database", "sql"]


[lib]
name = "rawsql"
path = "src/lib.rs"
doctest = false

[dev-dependencies]
postgres = "0.10"
